# openviking-demo

./: .gitignore  AGENTS.md  README.md  opencode.json  openviking-issues-summary.md  ov.conf.example  pyproject.toml
.opencode/: README.md  package-lock.json  package.json
.opencode/plugins/: openviking-attachments.ts  openviking-memory.ts  openviking-rules.ts
.opencode/rules/: README.md  answer-rules.md  general-retrieval.md
docs/superpowers/plans/: 2026-04-21-opencode-openviking-integration.md
docs/superpowers/specs/: 2026-04-21-openviking-web-ui-design.md
scripts/: openviking_bridge.py
tests/: test_openviking_bridge.py  test_openviking_plugin_attachments.ts  test_openviking_rules.ts
